pruebasNery/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8081
  selector:
    app: node-app
  type: NodePort
