pruebasNery/basic-ingress.yaml

  
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: node-app
    servicePort: 8080
